Initial commit: backend with Jenkinsfile and Flyway baseline